use XXX.valueOf(n) instead of new XXX(n) as suggested by findbugs.
git-svn-id: https://svn.apache.org/repos/asf/click/trunk@986270 13f79535-47bb-0310-9956-ffa450edef68